# rtk_hdg

./: .gitignore  .gitmodules
esp_app/: .gitignore  CMakeLists.txt
esp_app/main/: CMakeLists.txt  json_serialize.c  json_serialize.h  main.c  uart.c  uart.h  ubx_messages.h  ubx_parse.c  ubx_parse.h  wifi.c  wifi.h
rxcfg/: Base.txt  Rover.txt
server/: server.py
